tests/machine/x/scala/group_by_having.scala
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:39:29Z
object group_by_having {
  case class Big(city: String, num: Int)
  case class People(name: String, city: String)

  case class _Group[K,T](key: K, items: List[T]) extends Iterable[T] { def iterator: Iterator[T] = items.iterator }

  def main(args: Array[String]): Unit = {
    val people = List(People(name = "Alice", city = "Paris"), People(name = "Bob", city = "Hanoi"), People(name = "Charlie", city = "Paris"), People(name = "Diana", city = "Hanoi"), People(name = "Eve", city = "Paris"), People(name = "Frank", city = "Hanoi"), People(name = "George", city = "Paris"))
    val big = (((for { p <- people } yield (p.city, p)).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).filter{ g => (g).size >= 4 }).map{ g => Map("city" -> g.key, "num" -> (g).size) }.toList
    println(scala.util.parsing.json.JSONArray(big.asInstanceOf[List[Any]]).toString())
  }
}
